# Whatsapp-Scheduler

./: LICENSE  PyWhatKit_DB.txt  README.md  buildozer.spec  main.py  pyproject.toml  requirements.txt  setup_android_env.ps1  verify_setup.ps1  whatsapp.py  whatsapp_qt.py  whatsappscheduler.kv
